Add food attributes to be returned in get places api and filter categories e.g. middle east food
Adjust css of category cards
